examples/smlfmt-1.2.0/test/fail/unclosed-comment.sml

val (* who = (** this
               * is what happens *)
    *)
  who (* =

val why = 5
val _ =
  let
  in
    ()
  end
